# library_management

./: CMakeLists.txt  Makefile  README.md  compile.sh
include/: Author.h  Book.h
src/: Author.cpp  Book.cpp
test/: AuthorTest.cpp  BookAuthorTest.cpp
